Fixed TopBar Imgs
Replaced the old images with better cropped ones and adjusted for the difference in size.

--- a/src/Components/TopBar.css
+++ b/src/Components/TopBar.css
@@ -12,7 +12,7 @@
 }
 
 .topBar img {
-  width: 50%;
+  width: 80%;
   height: auto;
 }
 
